--- a/LoanManagement/appsettings.json
+++ b/LoanManagement/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "FinalLoanManagementDb": "Data Source=CTSDOTNET26;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; Initial Catalog=FinalLoanManagementDb;"
+  }
 }
