JWT Token authorization implemented

--- a/UserManagement/appsettings.json
+++ b/UserManagement/appsettings.json
@@ -10,5 +10,9 @@
   "ConnectionStrings": {
 
     "FinalUserDB": "Data Source=CTSDOTNET26;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; Initial Catalog=UserManagementDB;"
+  },
+  "Jwt": {
+    "Key": "ThisismySecretKey",
+    "Issuer": "Test.com"
   }
 }
